Fix player cards to make responsive on mobile

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1950,7 +1950,12 @@ pre code {
     width: 50%;
   }
   .col-md-6 {
-    width: 16%;
+    width: 20%;
+    text-align: center;
+    color: #fff;
+  }
+  .col-md-6 a {
+    color: 000;
   }
   .col-md-5 {
     width: 41.66666667%;
